Updated Connection Setting to DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,15 +7,17 @@ spring.mail.password=eiesvbxqcgzkiclx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+logging.file.name=logs/application.log
+logging.level.com.example.emailnotification=info
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/email_notification
 spring.datasource.username=postgres
-spring.datasource.password=mysecretpassword
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.flyway.url=jdbc:postgresql://localhost:5432/email_notification
 spring.flyway.user=postgres
-spring.flyway.password = mysecretpassword
+spring.flyway.password = postgres
 
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=10
