--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,18 +15,13 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
-
 spring.flyway.url=jdbc:postgresql://localhost:5432/email_notification
 spring.flyway.user=postgres
 spring.flyway.password = postgres
 
-
-spring.datasource.hikari.minimumIdle=5
-spring.datasource.hikari.maximumPoolSize=20
-spring.datasource.hikari.idleTimeout=30000
-spring.datasource.hikari.poolName=SpringBootJPAHikariCP
-spring.datasource.hikari.maxLifetime=2000000
-spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000 
+spring.datasource.hikari.pool-name=HikariConnPool
